# inpup

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
ip_files/Cheat_Sheet/: python_cheat_sheets.txt
ip_files/exercises/: my_label_entry.py  python_introduction.py  short_tree.py  test.notes  times_tables_simple.py
ip_files/exercises/IDLE/: arithmetic.txt  idle_2021_0817.py
ip_files/exercises/branches_loops/: branches.py  if_false.py  if_true.py  using_if_else.py  using_if_else_int.py  while_if_else_int.py  while_if_else_int_try.py  while_if_else_int_under_10.py  while_not _ray_or_smith.py  while_using_if_else.py  while_using_if_else_equal.py  while_using_if_else_minus_underline.py
ip_files/exercises/classes/: cards_card.py  cards_hand.py  from_turtle_import.py  import_turtle.py  import_turtle_n.py  import_turtle_n_local.py
ip_files/exercises/coin_flip/: coin_flip_count.py  coin_flip_count_ask.py  coin_flip_count_default.py  coin_flip_count_default_loop.py  coin_flip_count_loop.py  coin_flip_head_tail.py  coin_flip_limit_print.py  coin_flip_loop.py  coin_flip_random.py
ip_files/exercises/dice_game/: dice.py  dice_diaplay.py  dice_play.py
ip_files/exercises/dictionaries/: addresss.py  addresss_checking.py  commands_redo_2.py  dictionary1.py  dictionary_cmds.py  motion.py
ip_files/exercises/die_roll/: dice_roll.py  die_roll.py  die_roll_ask_default.py  die_roll_ask_default_base_name.py  die_roll_ask_default_prompt.py  die_roll_ask_default_simple.py  die_roll_ask_default_try.py  die_roll_ask_max_roll.py  die_roll_count.py  die_roll_count_average.py  die_roll_count_large.py  die_roll_count_limit.py  die_roll_game.py  die_roll_just_loop.py  die_roll_nums.py  die_roll_nums_lim_print.py  die_roll_nums_percent.py  die_roll_path_base_name.py  die_roll_random.py  die_roll_use_card_names.py  file_components.py  file_name.py  file_name_base.py
ip_files/my_work/: second_test.py
ip_files/one_session_overview/: Start Programming in Python Now.docx
ip_files/presentation/: Class_Guide.docx
(+418 files in other folders)
