#pyproject.toml  21Nov2025  intro-prog
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
  ]
build-backend = "setuptools.build_meta"

[project]
name = "intro-prog"
version = "0.0.1"
authors = [
  { name="Ray Smith", email="raysmith619@gmail.com" },
]
description = "Create Braille maps for simple Turtle program output"
readme = "README.md"
requires-python = ">=3.9
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
]

[tool.setuptools]
packages = ["Docs"]

[tool.setuptools.package-data]
"Docs" = ["../Docs/**"]


[project.urls]
Homepage = "https://github.com/raysmith619/inpup"
Issues = "https://github.com/raysmith619/inpup/issues"

[project.scripts]
ip = "inpup:iphelp"
iphelp = "inpup:iphelp"
ipreadme = "inpup:ipreadme"
ipfiles = "inpup:ipfiles"
iptest = "inpup:iptest"
iptest2 = "inpup:iptest2"